@@ -103,7 +103,9 @@ AREA_CHECKS: {
     my @wanted_links = (
 	[ "http://www.cnn.com/", "CNN", undef, "a" ],
 	[ "http://www.cnn.com/", "News", "Fred", "a" ],
-	[ "http://www.cnn.com/area", undef, undef, "area" ],
+	# Can someone confirm that I just fixed a bug here, and 
+	# area tags /should/ have names? -mls
+	[ "http://www.cnn.com/area", undef, 'Marty', "area" ],
     );
     my @links = $mech->find_all_links( url_regex => qr/cnn\.com/ );
     @{$_} = @{$_}[0..3] for @links;
